cleaned up code, add comments

--- a/Web/main_menu.html
+++ b/Web/main_menu.html
@@ -9,7 +9,7 @@
 <body>
 	<div>
 		<header>
-			<p><img src="pitt.gif" style="width:30%; max-width: 400px; max-height: 400px;"></p>
+			<p><img src="pitt.gif" style="width:30%"></p>
 		</header>
 		<button onclick="location.href='pickup.php'" class="btn">Pick Up</button>
 		<button onclick="location.href='dropoff.php'" class="btn">Drop Off</button>
