--- a/Web/dropoff.html
+++ b/Web/dropoff.html
@@ -4,13 +4,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">	
 	<title>Drop Off</title>
 	<link rel="stylesheet" type="text/css" href="menu.css"/>
+	<link rel="icon" type="image/ico" href="favicon.ico?">
 </head>
 <body>
 	<div>
 		<header>
-			<p><img src="pitt.gif" style="width:30%"></p>
+			<p><img src="University_of_Pittsburgh_Seal.svg" style="width:30%"></p>
 		</header>
-		<button onclick="location.href='returningCustomer.php'"  class="btn" style="width:150px; font-size:130%">Returning&#x00A;Customer</button>
+		<button onclick="location.href='returningCustomer.html'"  class="btn" style="width:150px; font-size:130%">Returning&#x00A;Customer</button>
 		<button onclick="location.href='newCustomer.php'"  class="btn" style="width:150px; font-size:130%">New&#x00A;Customer</button>
 		<button onclick="location.href='main_menu.html'" class="btn" style="width:150px;">BACK</button>
 	</div>
