--- a/Web/main_menu.html
+++ b/Web/main_menu.html
@@ -2,22 +2,22 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
-	
 	<title>Main Menu</title>
 	<link rel="stylesheet" type="text/css" href="menu.css"/>
+	<link rel="icon" type="image/ico" href="favicon.ico?">
 </head>
 <body>
 	<div>
 		<header>
-			<p><img src="pitt.gif" style="width:30%"></p>
+			<p><img src="University_of_Pittsburgh_Seal.svg" style="width:30%"></p>
 		</header>
-		<button onclick="location.href='pickup.php'" class="btn">Pick Up</button>
-		<button onclick="location.href='dropoff.php'" class="btn">Drop Off</button>
-		<button onclick="location.href='pharmacyQuestions.php'" style="font-size:20px" class="btn">Pharmacy Questions</button>
-		<button onclick="location.href='medicineQuestions.php'" style="font-size:20px" class="btn">Medicine Questions</button>
+		<button onclick="location.href='pickup.html'" class="btn">Pick Up</button>
+		<button onclick="location.href='dropoff.html'" class="btn">Drop Off</button>
+		<button onclick="location.href='pharmacyQuestions.html'" style="font-size:20px" class="btn">Pharmacy Questions</button>
+		<button onclick="location.href='medicineQuestions.html'" style="font-size:20px" class="btn">Medicine Questions</button>
 	</div>
-	<footer>
-		<p>Copyright &copy; 2016</p>
-	</footer>
 </body>
+<footer>
+	<p>Copyright &copy; 2016</p>
+</footer>
 </html>
