--- a/Web/medicineQuestions.html
+++ b/Web/medicineQuestions.html
@@ -5,9 +5,11 @@
 	<title>Medicine Questions</title>
 	<link rel="stylesheet" type="text/css" href="menu.css"/>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<link rel="icon" type="image/ico" href="favicon.ico?">
   	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
   	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	<script>
+		// jquery for accordion menu and 'talk to technician' dialog
 		$(function() {
     		$( "#accordion" ).accordion({
       			collapsible: true,
@@ -16,6 +18,7 @@
 				autoFill: false
     		});
   		});
+		
   		$(function() {
     		$( "#dialog" ).dialog({
       		autoOpen: false,
@@ -29,42 +32,17 @@
         		duration: 100
       		}
     		});
-    	$( "#open" ).click(function() {
-      		$( "#dialog" ).dialog( "open" );
+			$( "#open" ).click(function() {
+				$( "#dialog" ).dialog( "open" );
     		});
   		});
-	</script>
-</head>
-<body>
-	<header>
-		<p><img src="pitt_logo.png"></p>
-	</header>
-	<button onclick="location.href='main_menu.html'" class="btnTypeThree">HOME</button>
-	<button id="open" class="btnTypeThree">TALK TO TECHNICIAN</button>
-	<br></br>	
-	<div id="dialog" title="TALK TO TECHNICIAN">
-  		<p>Please enter your name to talk to a technician</p>
-  		<form class="pure-form pure-form-aligned" method="POST" action="submit.php" onsubmit="location.href='thankyou.php'">
-			<div class="pure-control-group">
-				<p>
-				<input id="FirstName" type="text" placeholder="First Name" name="firstname" required>
-				</p>
-				<p>
-				<input id="LastName" type="text" placeholder="Last Name" name="lastname" required>
-				</p>
-			</div>
-			<div id="section">
-				<button type="submit" class="btnTypeTwo">SUBMIT</button>
-				<input type="hidden" name="type" value="talk">
-			</div>
-  		</form>
-	</div>
-	<br></br>
-	<div id="accordion">
 		
-	</div>
-	<script>
-		//Script currently assumes xml file as stored on server, and this file on server can be manipulated by the pharmacy.
+		// keep dialog centered if page is resized
+		$(window).resize(function() {
+			$("#dialog").dialog("option", "position", {my: "center", at: "center", of: window});
+		});
+
+		// Script currently assumes xml file as stored on server, and this file on server can be manipulated by the pharmacy.
 		var xhttp = new XMLHttpRequest();
 		xhttp.onreadystatechange = function() {
 		    if (xhttp.readyState == 4) {
@@ -76,7 +54,7 @@
 				}
 		    }
 		};
-		//assume drugFAQ.xml is file name with FAQ contents.
+		// assume drugFAQ.xml is file name with FAQ contents.
 		xhttp.open("GET", "drugFAQ.xml", true); 
 		xhttp.send();
 
@@ -106,5 +84,35 @@
 		    
 		}
 	</script>
+</head>
+<body>
+	<header>
+		<p><img src="university-of-pittsburgh-logo-long.svg"></p>
+	</header>
+	<button onclick="location.href='main_menu.html'" class="btnTypeThree">HOME</button>
+	<button id="open" class="btnTypeThree">TALK TO TECHNICIAN</button>
+	<br></br>	
+	<div id="dialog" title="TALK TO TECHNICIAN">
+  		<p>Please enter your name to talk to a technician</p>
+  		<form class="pure-form pure-form-aligned" method="POST" action="submit.php" onsubmit="location.href='thankyou.php'">
+			<div class="pure-control-group">
+				<p>
+				<input id="FirstName" type="text" placeholder="First Name" name="firstname" required>
+				</p>
+				<p>
+				<input id="LastName" type="text" placeholder="Last Name" name="lastname" required>
+				</p>
+			</div>
+			<div id="section">
+				<button type="submit" class="btnTypeFour">SUBMIT</button>
+				<input type="hidden" name="type" value="talk">
+			</div>
+  		</form>
+	</div>
+	<br></br>
+	<div id="accordion">
+		
+	</div>
+
 </body>
 </html>
