--- a/Web/back_end.html
+++ b/Web/back_end.html
@@ -1,21 +1,22 @@
 <html>
 <head>
-<title>Kiosk Queue</title>
-<link rel="stylesheet" type="text/css" href="backend.css"/>	
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<script src="back_end_javascript.js"></script>
+	<title>Kiosk Queue</title>
+	<link rel="stylesheet" type="text/css" href="backend.css"/>	
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<link rel="icon" type="image/ico" href="favicon.ico?">
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<script src="back_end_javascript.js"></script>
 </head>
 <body onload = "refreshPage()">
-	<div id="header"> <p><img src="pitt_logo.png"></p> </div>
+	<div id="header"> <p><img src="university-of-pittsburgh-logo-long.svg"></p> </div>
 	<div id="main-wrap">
-		<div id="sidebar">			
-			<label for="pickupTable">Pick Ups</label>	
+		<div id="sidebar">
+			<label for="pickupTable">Pick Up</label>	
 			<ul id ="pickupTable"></ul>
 			<br>
-			<label for="dropoffTable">Drop Offs</label>
+			<label for="dropoffTable">Drop Off</label>
 			<ul id = "dropoffTable"></ul>
 			<br>
 			<label for="talkTable">Questions</label>
@@ -28,20 +29,21 @@
 			</div>
 		</div>
 		<div id="right-sidebar">
-			<label for="pickupTable2">Pick Ups</label>	
+			<label for="pickupTable2">Pick Up Archive</label>	
 			<ul id ="pickupTable2"></ul>
 			<br>
-			<label for="dropoffTable2">Drop Offs</label>
+			<label for="dropoffTable2">Drop Off Archive</label>
 			<ul id = "dropoffTable2"></ul>
 			<br>
-			<label for="talkTable2">Questions</label>
+			<label for="talkTable2">Questions Archive</label>
 			<ul id = "talkTable2"></ul>
 		</div>
 	</div>
 	<div id="footer">
 		<input type="button" class="btn" onclick="nextItem(2)" value="Next Pickup">
 		<input type="button" class="btn" onclick="nextItem(3)" value="Next Dropoff">
-		<input type="button" class="btn" onclick="nextItem(4)" value="Questions">
+		<input type="button" class="btn" onclick="nextItem(4)" value="Next Questions">
+		<input type="button" class="btn" onclick="flushArchive()" value="Flush Archive">
 	</div>
 </body>
 </html>
